--- a/css/faleConosco.css
+++ b/css/faleConosco.css
@@ -66,9 +66,8 @@ textarea {
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  transition: background 0.3s ease;
 }
 
 .btn-enviar:hover {
-  background-color: #4c0096;
+  background-color:#4c0096
 }
